# vuongpd95.github.io

./: .gitignore  404.html  README.md  _config.yml  about.html  about.markdown  blog.cabal  i18n.hs  index.html  site.hs
_posts/: 2022-04-10-welcome-to-jekyll.markdown  2022-06-20-what-i-learned-from-the-book-TDD-by-example-Kent-Beck.markdown
css/: default.css
docs/: CNAME  about.html  index.html
docs/css/: default.css
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2023-09-19-why-I-have-a-youtube-channel.html  2023-09-22-is-your-codes-tightly-coupled.html  2023-09-22-khoa-hoc-lap-trinh-web-mien-phi-cho-nguoi-moi-bat-dau.html
posts/: 2023-09-19-why-I-have-a-youtube-channel.markdown  2023-09-22-is-your-codes-tightly-coupled.markdown  2023-09-22-khoa-hoc-lap-trinh-web-mien-phi-cho-nguoi-moi-bat-dau.markdown
templates/: about.html  default.html  post.html
