name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , containers == 0.6.*
  ghc-options:      -I. --make i18n.hs -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
